Light Path Node broken in Eevee 2.81 #71050

Closed
opened 2019-10-23 21:10:57 +02:00 by Dan Pool · 9 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30

Blender Version
Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: 54a9649e26
Worked: 2.80

Short description of error
The "Is Camera Ray" output of the Light Path node is no longer working as it did in 2.80. This is used in the attached scene to fake transparent material caustics. It still works in cycles.

Exact steps for others to reproduce the error
Open the attached file and switch the 3d viewport to rendered view. The shadow should have some transparency in the center in 2.80, but this will not be the case in 2.81
Light Path 2.81.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: Quadro P4000/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 436.30 **Blender Version** Broken: version: 2.81 (sub 14), branch: master, commit date: 2019-10-06 14:05, hash: `54a9649e26` Worked: 2.80 **Short description of error** The "Is Camera Ray" output of the Light Path node is no longer working as it did in 2.80. This is used in the attached scene to fake transparent material caustics. It still works in cycles. **Exact steps for others to reproduce the error** Open the attached file and switch the 3d viewport to rendered view. The shadow should have some transparency in the center in 2.80, but this will not be the case in 2.81 [Light Path 2.81.blend](https://archive.blender.org/developer/F7850990/Light_Path_2.81.blend)
Author

Added subscriber: @DanPool

Added subscriber: @DanPool
Author

If the Mix Shader Fac input is changed to the Is Camera Ray output instead, both Suzanne and her shadow use the transparency shader.

If the Mix Shader Fac input is changed to the Is Camera Ray output instead, both Suzanne and her shadow use the transparency shader.

Added subscriber: @mano-wii

Added subscriber: @mano-wii
Clément Foucault was assigned by Germano Cavalcante 2019-10-24 15:53:03 +02:00

I can confirm.
It seems to work on blender 2.80

I can confirm. It seems to work on blender 2.80

This issue was referenced by 883e22a92c

This issue was referenced by 883e22a92ca5b2b22bd441bedc6bdd1626980f35

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

Coming from “industry standard” software where bugs like this are reported yet persist for years, it is really refreshing to see things like this getting fixed so fast. Here’s to developers working without bureaucracy! You guys are great.

Coming from “industry standard” software where bugs like this are reported yet persist for years, it is really refreshing to see things like this getting fixed so fast. Here’s to developers working without bureaucracy! You guys are great.

Added subscriber: @digital0785

Added subscriber: @digital0785

In #71050#802924, @DanPool wrote:
Coming from “industry standard” software where bugs like this are reported yet persist for years, it is really refreshing to see things like this getting fixed so fast. Here’s to developers working without bureaucracy! You guys are great.

i agree I've worked with max for 15 years and never once had a bug I've found fixed lol. I'm thrilled with how responsive the staff is and how committed they are to making the product better for everyone

> In #71050#802924, @DanPool wrote: > Coming from “industry standard” software where bugs like this are reported yet persist for years, it is really refreshing to see things like this getting fixed so fast. Here’s to developers working without bureaucracy! You guys are great. i agree I've worked with max for 15 years and never once had a bug I've found fixed lol. I'm thrilled with how responsive the staff is and how committed they are to making the product better for everyone
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#71050
No description provided.