Fix T71050 EEVEE: Light Path Node broken in 2.81

Also fixes the sampling of hashed shadows.